update herokuapp settings file (for testing solarnet on real games).

--- a/docs/herokuapp_settings_solo.json
+++ b/docs/herokuapp_settings_solo.json
@@ -14,7 +14,7 @@
     "draftVariant": true,
     "showOtherPlayersVP": true,
     "venusNext": true,
-    "colonies": false,
+    "colonies": true,
     "turmoil": false,
     "customCorporationsList": [
         "EcoLine",
@@ -43,7 +43,8 @@
         "Arklight",
         "Polyphemos",
         "Pharmacy Union",
-        "Splice"
+        "Splice",
+        "Poseidon"
     ],
     "customColoniesList": [],
     "customPreludes": [
@@ -91,26 +92,19 @@
         "Advertising",
         "Asteroid Deflection System",
         "Capital",
-        "Crash Site Cleanup",
         "Cutting Edge Technology",
         "Dirigibles",
-        "Diversity Support",
-        "Flooding",
         "Interplanetary Trade",
-        "Land Claim",
-        "Law Suit",
         "Mining Area",
         "Mining Rights",
-        "Protected Habitats",
         "Psychrophiles",
         "Self-replicating Robots",
         "Special Design",
-        "Spin-off Department",
-        "Viral Enhancers"
+        "Spin-off Department"
     ],
-    "board": "hellas",
-    "seed": 0.29099370528707147,
-    "solarPhaseOption": false,
+    "board": "random official",
+    "seed": 0.6218183858387776,
+    "solarPhaseOption": true,
     "promoCardsOption": true,
     "communityCardsOption": false,
     "aresExtension": false,
@@ -123,7 +117,7 @@
     "removeNegativeGlobalEventsOption": false,
     "includeVenusMA": true,
     "includeFanMA": false,
-    "startingCorporations": "4",
+    "startingCorporations": "5",
     "soloTR": true,
     "initialDraft": false,
     "randomMA": "No randomization",
@@ -134,7 +128,7 @@
     "moonStandardProjectVariant": false,
     "altVenusBoard": false,
     "escapeVelocityMode": false,
-    "twoCorpsVariant": false,
+    "twoCorpsVariant": true,
     "ceoExtension": false,
     "customCeos": [],
     "startingCeos": 3
