one more full-solo-game test

--- a/docs/herokuapp_settings_solo.json
+++ b/docs/herokuapp_settings_solo.json
@@ -94,6 +94,7 @@
         "Capital",
         "Cutting Edge Technology",
         "Dirigibles",
+        "Flooding",
         "Interplanetary Trade",
         "Mining Area",
         "Mining Rights",
